Fixed footer socials alignment mobile

--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -698,6 +698,7 @@ footer {
 .footer-socials {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(217px, 1fr));
+    justify-content: center;
     row-gap: 36px;
     margin: auto;
     width: 60%;
